--- a/main.css
+++ b/main.css
@@ -2,21 +2,25 @@
 html,
 body {
     margin: 0;
+}
+ 
+body {
     background-color: #c29b62;
 }
-
+ 
 /* Taille de toutes les images <img ...>  */
 img {
     width: 45%;
 }
-
+ 
 /* Container flexbox : direction "column" avec alignement au milieu */
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 50px 0 50px 0;
 }
-
+ 
 /* Carré principal contenant les images en flexbox avec l'ombre porté et le contour arrondi du carré */
 .carre {
     background-color: orange;
@@ -28,11 +32,11 @@ img {
     border: 1px solid #fff;
     border-radius: 5px;
     padding: 16px;
-    -moz-box-shadow: 0 0 15px rgba(0,0,0,.5);
-    -webkit-box-shadow: 0 0 15px rgba(0,0,0,.5);
-    box-shadow: 0 0 15px rgba(0,0,0,.5);
+    -moz-box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
 }
-
+ 
 /* Image fixe du panda en haut à droite */
 .fixedPanda {
     position: fixed;
@@ -40,3 +44,32 @@ img {
     top: 10px;
     right: 10px;
 }
+ 
+h1 {
+    font-size: 24px;
+    color: white;
+}
+ 
+h3 {
+    font-size: 20px;
+    color: white;
+}
+ 
+p {
+    font-size: 16px;
+    color: white;
+}
+ 
+.secTitle {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    width: 50%;
+    border: 1px dashed #fff;
+    padding: 30px;
+    margin: 50px auto;
+}
+ 
+.secTitle > .images {
+    flex: 1 0 0%;
+    margin-right: 16px;
