--- a/css/css2.css
+++ b/css/css2.css
@@ -1,4 +1,8 @@
-/* Resets */
+/* media query pour passer en version mobile  */
+
+@media screen and (min-width: 400px)  {
+
+    /* Resets */
 html,
 body {
     margin: 0;
@@ -28,32 +32,35 @@ img {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    height: 500px;
-    width: 500px;
+    height: 1150px;
+    width: 1150px;
     border: 1px solid #fff;
     border-radius: 5px;
     padding: 16px;
     -moz-box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    margin-top: 5%;
 }
  
 /* Image fixe du panda en haut à droite */
 .fixedPanda {
     position: fixed;
-    width: 100px;
-    top: 10px;
-    right: 10px;
+    width: 250px;
+    top: 35px;
+    right: 35px;
 }
  
 h1 {
-    font-size: 24px;
+    font-size: 100px;
     color: white;
+    margin-bottom: 0%;
 }
  
 h3 {
-    font-size: 20px;
+    font-size: 45px;
     color: white;
+    margin-bottom: 5%;
 }
  
 p {
@@ -62,28 +69,28 @@ p {
 }
  
 .secTitle {
-    display: flex;
-    flex-direction: row;
+    display: block;
     align-items: flex-start;
-    width: 50%;
-    border: 1px dashed #fff;
-    padding: 30px;
-    margin: 50px auto;
+    width: 100%;
+    padding: 0px;
+    margin: 0px auto;
 }
  
 .secTitle > .images {
     flex: 1 0 0%;
-    margin-right: 16px;
+    margin-right: 0px;
+    text-align: center;
+    margin-top: 3%;
+    
 }
 
 .image5{
-    width: 300px;
+    width: 1150px;
 }
 
-
-
-
-
-
-
-  
+.text{
+    padding: 5%;
+    font-family: sans-serif;
+    margin-bottom: 10%;
+}
+    }
